test/should_fail/enum_model_004.gm
model enum_model_004;

node class A {
	x: int;
}

enum te {
	a = A.x,
	b
}
